--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "AdminConnection": "Host=admin-db;Port=5432;Database=spacelogic_admin_db;Username=admin;Password=admin",
-    "DefaultConnection": "Host=localhost;Port=5432;Database=spacelogic;Username=postgres;Password=admin"
+    "AdminConnection": "",
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
