--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,3 +1,4 @@
+
 {
   "Logging": {
     "LogLevel": {
@@ -7,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Database=spacelogic;Username=admin;Password=admin"
+    "DefaultConnection": "",
+    "AdminConnection": ""
   }
 }
