--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "check:all": "npm run check:ts && npm run lint"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.9.0",
     "i18next": "^25.1.3",
     "react": "^19.1.0",
@@ -35,7 +36,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
